Twitter image and translation correction

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css" media="nope!" onload="this.media='all'">
     <!--link rel="stylesheet" href="index.css" media="nope!" onload="this.media='all'"-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+	<meta name="twitter:card" content="summary_large_image">
+	<meta name="twitter:title" content="LiberFly">
+	<meta name="twitter:image" content="https://liberfly.pt/twitterimg.png">    
 	</head>
 	<body>
 		<div id='root'>
